# bosy

./: .dockerignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  cav-artifact.sh
aiger/: Cargo.toml  aiger.c  build.rs  wrapper.h
bosy/: Cargo.toml
bosy/src/: app.rs  automata.rs  encoding.rs  lib.rs  logic.rs  main.rs  specification.rs
bosy/src/app/: bosy.rs
bosy/src/automata/: conversion.rs  dot.rs  neverclaim.pest  reduction.rs
cav-samples/: arbiter-2-full-prompt-1.bosy  arbiter-2-full-prompt-1.smt2  arbiter-2-full-prompt-2.smt2  arbiter-2-prompt-1.bosy  arbiter-2-prompt-1.smt2  arbiter-2-prompt-2.smt2  arbiter-3-full-prompt-1.bosy  arbiter-3-prompt-1.bosy  arbiter-3-prompt-1.smt2  arbiter-3-prompt-2.smt2  arbiter-4-prompt-1.bosy  arbiter-4-prompt-1.smt2  arbiter-4-prompt-2.smt2  bounded-waiting-grant-2.bosy  bounded-waiting-grant.bosy  dinning-cryptographers.smt2
cudd/: Cargo.toml  build.rs  wrapper.h
game/: Cargo.toml
game/src/: aiger.rs  app.rs  bounded.rs  lib.rs  safety.rs
game/src/app/: game.rs  safety.rs
hyperltl/: Cargo.toml
samples/: amba_2.bosy  amba_reduced.bosy  amba_tburst.bosy  bakery_full_ltl.bosy  bakery_full_tie_realizable.bosy  bakery_full_wait_free.bosy  bakery_prefix_independence.bosy  bakery_sym1_ae.bosy  bakery_sym1_ea.bosy  bakery_tie_realizable.bosy  bakery_tie_realizable_exists.bosy  counter-reduced.bosy  dining-cryptographers-distributed.bosy  dining-cryptographers-exists.bosy  error.bosy  hyper-qptl.bosy  liveness_assumptions.bosy  need_prophecy.bosy  prophecy.bosy  test.bosy  (+11 more)
(+41 files in other folders)
