[package]
name = "bosy"
version = "0.1.0"
authors = ["Leander Tentrup <tentrup@react.uni-saarland.de>"]
edition = "2018"

[dependencies]
hyperltl = { path = "../hyperltl" }
smtlib = { path = "../smtlib" }
pest = "^2.0"         # parser generator
pest_derive = "^2.0"
clap = "2.32.0"       # parsing command line arguments
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"  # parsing JSON files
